--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 # Production Dependencies
-PyQt6
-PyQt6-WebEngine
-psutil
-darkdetect
-platformdirs
+PyQt6>=6.4.0
+PyQt6-WebEngine>=6.4.0
+psutil>=5.9.0
+pydantic>=2.0.0
 
 # Development Dependencies (install with: pip install -r requirements-dev.txt)
